spacing fix for #1210

--- a/jsapp/kobo/stylesheets/pages/form_list.scss
+++ b/jsapp/kobo/stylesheets/pages/form_list.scss
@@ -177,7 +177,7 @@
     margin-bottom: 12px;
     font-size: 11px;
     border: $cardBorderStyle;
-    padding: 20px;
+    padding: 15px 20px;
     display: block;
     background: white;
     position: relative;
